--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "5.0.2"
   },
   "devDependencies": {
+    "@types/next-auth": "^3.15.0",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
