--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "./src/**/*.{js,ts,jsx,tsx}"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", "./src/**/*.{js,ts,jsx,tsx}", "./src/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
